# BEI

./: .gitignore  LICENSE  README.md  build.py  build_config.py  main.py  requirements.txt  run.py  setup_env.py  setup_linux.sh  setup_windows.bat  test_demo.txt
blue_edge_analyzer/: __init__.py
blue_edge_analyzer/core/: __init__.py  blue_edge_calculator.py  excel_processor.py
blue_edge_analyzer/gui/: __init__.py  main_window.py
blue_edge_analyzer/utils/: __init__.py  validators.py
build_tools/: README.md
data_samples/: README.md  data_generator_config.py  test_data_generator.py
docs/: README.md  pyproject.toml
examples/: README.md
examples/sample_data/: sample_edge_decay.xlsx
scripts/: Makefile  README.md  setup_env.py  setup_windows.bat
tests/: test_blue_edge_calculator.py  test_excel_processor.py
